# investo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IDEA.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: investo-developer.md  investo-lead.md  investo-ops.md  investo-planner.md  investo-qa.md
.codex/skills/: aidlc-refactor-unit-planner  briefing-unit-planner  cross-check  data-source-unit-planner  dev-investo  investo-team
.github/: dependabot.yml
.github/workflows/: daily-briefing.yml  pages.yml  quality.yml
aidlc-docs/: aidlc-state.md  audit.md
archive/: index.md
archive/_meta/: coverage.jsonl  forecast_log.jsonl  quality_history.jsonl
archive/crypto/: index.md
archive/domestic-equity/: index.md
archive/monthly/: 2026-05.md  2026-06.md  index.md
archive/us-equity/: index.md
archive/weekly/: 2026-W19.md  2026-W20.md  2026-W21.md  index.md
config/: watchlist.example.json
docs/: DESIGN.md  TECH-DEBT.md  refinement-log.md  refinement-questions.md  requirements.md  tech-env.md  vision.md
docs/cross-checks/: 2026-04-27-u1-sources.md  2026-05-03-u2-briefing.md  2026-05-03-u3-publisher.md  2026-05-03-u4-notifier.md  2026-05-03-u5-orchestrator.md  2026-05-03-u6-infra-ci.md  2026-05-07-u10-source-coverage-diagnostics.md  2026-05-07-u19-briefing-visual-assets.md  2026-05-07-u22-source-coverage-transparency.md  2026-05-07-u24-visual-provenance-and-layout.md  2026-05-07-u7-segmented-briefing.md  2026-05-07-u8-market-aware-source-window.md  2026-05-07-u9-briefing-reader-experience.md  2026-05-08-u25-summary-fidelity-and-content-trust.md  (+19 more)
overrides/: main.html
scripts/: backfill_2026_05_06_visuals.py  benchmark_public_document_finalizer.py  check_curated_assets.py  check_daily_briefing_env.py  check_image_store.py  check_no_anthropic_sdk.py  check_no_paid_apis.py  replay_generated_briefing_quality.py  resolve_weekly_flags.py  validate_sector_dashboard_private.py
site_docs/: about.md  accuracy.md  index.md  quality.md
tests/: conftest.py
(+2329 files in other folders)
