[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investo"
version = "0.1.0"
description = "Daily market briefing automation (US stocks + crypto + KOSPI). Driven by Claude Code CLI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "hyunseung.kim" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Private :: Do Not Upload",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "defusedxml>=0.7",
    "bleach>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-bleach>=6",
    "types-defusedxml>=0.7",
]

[project.scripts]
investo = "investo.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/investo"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
extend-exclude = [
    "aidlc-workflows",
    "aidlc-docs",
    ".venv",
    "archive",
    "examples",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # allow assert False in tests

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
